# iso8211

./: Cargo.toml  README.md  index.md
.github/workflows/: ci.yml
docs/: index.html
examples/: read.rs
gnss/: Cargo.toml
src/: data_descriptive_field.rs  data_descriptive_record.rs  data_field.rs  data_record.rs  ddf.rs  directory.rs  directory_entry.rs  document.rs  errors.rs  field.rs  file_control_field.rs  leader.rs  lib.rs  reader.rs
src/ddr/: ddf.rs  fcf.rs  mod.rs  record.rs
src/dr/: field.rs  mod.rs  record.rs
src/error/: mod.rs
tests/: common.rs  read_tests.rs  s_64_2_1_1.rs
